--- a/RomanNumeralsWeb/Views/Home/Index.cshtml
+++ b/RomanNumeralsWeb/Views/Home/Index.cshtml
@@ -11,11 +11,15 @@
 
 <form asp-action="Index">
     <div class="form-group">
-        <label class="control-label">nombre à convertir en chiffres romains ?</label>
-        <input name="number" class="form-control" type="number" min="1" max="3999" value="" required />
+        <label class="control-label">nombre à convertir en chiffres romains</label>
+        <input name="number" class="form-control" type="number" min="1" max="3999" value="" />
     </div>
     <div class="form-group">
-        <input name="number" type="submit" class="btn btn-primary" />
+        <label class="control-label">nombre romain à convertir en nombre arabe</label>
+        <input name="romanNumber" class="form-control" type="text" value="" />
+    </div>
+    <div class="form-group">
+        <input type="submit" class="btn btn-primary" />
     </div>
 </form>
 
