--- a/RomanNumeralsWeb/Views/Home/Index.cshtml
+++ b/RomanNumeralsWeb/Views/Home/Index.cshtml
@@ -6,16 +6,16 @@
 
 <div class="text-center">
     <h1 class="display-4">Roman Numerals</h1>
-    <p><a href="https://docs.microsoft.com/aspnet/core">build with ASP.NET Core</a>.</p>
+    <p>by <a href="https://github.com/newtomsoft/RomanNumerals" target="_blank">Thomas Vuille</a> (with love) with <a href="https://docs.microsoft.com/aspnet/core" target="_blank">ASP.NET Core</a></p>
 </div>
 
 <form asp-action="Index">
     <div class="form-group">
-        <label class="control-label">nombre à convertir en chiffres romains</label>
+        <label class="control-label">nombre à traduire en chiffres romains</label>
         <input name="number" class="form-control" type="number" min="1" max="3999" value="" />
     </div>
     <div class="form-group">
-        <label class="control-label">nombre romain à convertir en nombre arabe</label>
+        <label class="control-label">nombre romain à traduire</label>
         <input name="romanNumber" class="form-control" type="text" value="" />
     </div>
     <div class="form-group">
@@ -23,6 +23,4 @@
     </div>
 </form>
 
-<h1>
-    -> @Model
-</h1>
+<h2>@Model</h2>
